[-] Bug fixed.
[+] Feature added.
[*] Change.

2008-XX-XX v1.XX
================
- fixed bug 1834537 NullPointerException in constraintViolation.getCauses()
- fixed bug 1852088 Incorrect default message for NotEqual validation
- fixed bug 1852087 Corrupt default localized messages
* upgraded to Groovy 1.5.1
- fixed bug 1868301 OVal with groovy - Performance Evaluation

2007-11-02 v1.10
================

Built-in constraints:
 + added @net.sf.oval.constraint.AssertURL (thanks to Makkari)
 + added @net.sf.oval.constraint.InstanceOfAny
 + added @net.sf.oval.constraint.MemberOf
 + added @net.sf.oval.constraint.NotEqual
 + added @net.sf.oval.constraint.NotMemberOf
 + added errorCode property
 + added severity property
 
Expression languages:
 + added support for Ruby (JRuby) as expression language

Localization:
 * update Polish translation of the constraint violation messages (thanks to Christopher Faryna) 
 + added new translations of the contraint violation messages:
   + Chinese (thanks to kindloaf)
   + Dutch (thanks to miep)
   + Hungarian (thanks to Gabor Nagy)
   + Italian (thanks to Mastermind X)
   + Norwegian (thanks to Simen Røkaas)
   + Portuguese (thanks to Rubem Azenha)
   + Romanian (thanks to A. Mate)
   + Russian (thanks to Andrey Qwerty)
   + Spanish (thanks to Luis Garcia Sevillano)
   + Swedish (thanks to Johan Hedberg)
   + Turkish (thanks to Merdan Nouryev)

Testing:
 + added multi threading test for net.sf.oval.Validator
 + added tests for net.sf.oval.constraints.*Check classes

Validator:
 + added method Validator.assertValid(...)
 + added method Validator.assertValidFieldValue(...)
 * renamed method Validator.validateField(...) to Validator.validateFieldValue(...)
 * @AssertValid now recursively checks Arrays, Lists and Maps containing List, Map and Array items
 + added support for object-level constraints (@Assert, @CheckWith and @ValidateWithMethod can now be declared on class-level)
 
Refactoring: